--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -14,7 +14,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar  color="primary">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -23,7 +23,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>front</span>
+      <span>Gestion de produit</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
